appId: org.reactjs.native.example.AndreiZgirvaciOnboarding
---
- launchApp

- runFlow: ./home-screen-flow.yaml

- tapOn:
    id: 'weather-list-item-Kyiv'

- runFlow: ./details-screen-flow.yaml

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Weather'
- runFlow:
    when:
      platform: Android
    commands:
      - back

- runFlow: ./home-screen-flow.yaml
